# metaminer

./: .gitignore  LICENSE  README.md  REORGANIZATION_SUMMARY.md  example_document.txt  example_questions.csv  pyproject.toml  setup.py  test_document_with_arrays.txt  test_metaminer.py
.github/workflows/: README.md  publish-to-pypi.yml  test.yml
metaminer/: __init__.py  __main__.py  cli.py  config.py  datatype_inferrer.py  document_reader.py  extractor.py  inquiry.py  question_parser.py  schema_builder.py
tests/: example_questions.txt  example_questions_with_arrays.csv  example_questions_with_datetime.csv  example_questions_with_defaults.csv  example_questions_with_enums.csv  test_array_types.py  test_concurrent_processing.py  test_config.py  test_datatype_inferrer.py  test_date_parsing.py  test_document_reader.py  test_enum_defaults.py  test_enum_types.py  test_fix.py  test_inquiry.py  test_metaminer.py  test_text_processing.py
