[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaminer"
version = "0.3.2"
description = "Extract structured information from documents using AI"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Travis Adams", email = "tadams792@gmail.com"}
]
maintainers = [
    {name = "Travis Adams", email = "tadams792@gmail.com"}
]
keywords = ["ai", "document", "extraction", "nlp", "openai", "structured-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "pypandoc>=1.5",
    "PyMuPDF>=1.20.0",
    "python-dateutil>=2.8.0",
    "typing_extensions>=4.0.0;python_version<'3.9'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock",
]

[project.scripts]
metaminer = "metaminer.cli:main"

[project.urls]
Homepage = "https://github.com/travis4dams/metaminer"
Repository = "https://github.com/travis4dams/metaminer"
Issues = "https://github.com/travis4dams/metaminer/issues"
PyPI = "https://pypi.org/project/metaminer/"
Documentation = "https://github.com/travis4dams/metaminer#readme"

[tool.setuptools]
packages = ["metaminer"]

[tool.setuptools.package-dir]
metaminer = "metaminer"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
